--- a/RealEstate.API/Properties/launchSettings.json
+++ b/RealEstate.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/realestate",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
