--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Publish
-      run: dotnet publish -r win-x64 --self-contained=true -p:PublishSingleFile=true
+      run: dotnet publish RealEstate.API -r win-x64 --self-contained=true -p:PublishSingleFile=true
 
