--- a/RealEstate.API/RealEstate.API.csproj
+++ b/RealEstate.API/RealEstate.API.csproj
@@ -1,17 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
 	  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NSwag.AspNetCore" Version="13.10.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Database classes\" />
   </ItemGroup>
 
 </Project>
