--- a/RealEstate.API/appsettings.json
+++ b/RealEstate.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RealEstateContext": "Data Source=DESKTOP-LLPVCRN\\KISIELSQL;Initial Catalog=RealEstateManagement;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security=True;"
+  }
 }
