Added caching and image support

--- a/RealEstate.API/appsettings.json
+++ b/RealEstate.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RealEstateContext": "Data Source=DESKTOP-LLPVCRN\\KISIELSQL;Initial Catalog=RealEstateManagement;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security=True;"
+    "RealEstateContext": "Data Source=DESKTOP-LLPVCRN\\KISIELSQL;Database=RealEstateManagement;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security=True;"
   }
 }
